@@ -1,3 +1,6 @@
+2009-07-22
+	Implemented "ELSE IF" syntax
+	
 2009-07-11
 	fltk - file widget displays sorted items
 	
